# DebateV2

./: .gitignore  AGENTS.md  AIHARNESS-BUILD-PLAN.md  CHANGELOG.md  LICENSE  README.md  goal-dialectical-engine-v2.md  goal_proposal_b_debate_weighted_qbaf.md  planning-thread-runtime-skills-prompt.md  runtime-skills-coding-agent-prompt.txt
apps/: README.md
apps/dialectical-engine/coordinator/: alembic.ini  pyproject.toml
apps/dialectical-engine/coordinator/app/: __init__.py  main.py
apps/dialectical-engine/coordinator/migrations/: README.md  env.py
apps/dialectical-engine/coordinator/tests/: conftest.py  test_acceptance_check.py  test_agent_roster.py  test_anti_obfuscation.py  test_api_auth_settings.py  test_db.py  test_debate_loop.py  test_deployment_preflight.py  test_dev_runner.py  test_dialectical_v2.py  test_evaluation_harness.py  test_events.py  test_evidence_pipeline.py  test_final_single_machine_check.py  test_hosting_status.py  test_install_tunnel.py  test_local_cluster_check.py  test_makefile_targets.py  test_node_selection.py  test_orchestrator.py  test_prepare_romarg_nameservers.py  test_providers.py  test_qbaf_api.py  test_qbaf_foundation.py  test_qbaf_model.py  test_qbaf_semantics.py  test_recursive_orchestrator.py  test_routing.py  test_runtime_skills.py  test_self_consistency_scoring.py  test_serialization.py  test_setup_named_tunnel.py  test_status_report.py  test_stopping.py  test_v2_cleanup_contract.py  test_verify_public_endpoint.py  test_verify_worker_visible.py  test_web_proxy.py
apps/dialectical-engine/worker/: pyproject.toml
(+329 files in other folders)
