[project]
name = "dialectical-engine-coordinator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "bcrypt>=4.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
